--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 .player-name {
