--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -6,10 +6,12 @@
 }
 
 .overlay{
-  position:absolute;
+  position: fixed;
+  height: 100%;
   top:0;right:0;left:0;bottom:0;
   background-color:rgba(255,255,255,0.6);
   z-index:0;
+  min-height: 100vh;
 }
 
 .player-name {
