--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -101,12 +101,19 @@ input {
   border: none;
 }
 
+.Dropdown-menu {
+  max-height: 90vh;
+}
+
 .Dropdown-option.is-selected {
     background-color: rgba(255, 255, 255, 0.9);
 }
 
 div.modal-outline {
   padding: 2vmin;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   input {
     margin: 0;
   }
